[package]
name = "dawn-bindgen"
version = "0.0.0"
edition = "2024"
publish = false
license = "BSD-3-Clause"
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
bindgen = "0.71.1"
prettyplease = "0.2.32"
proc-macro2 = { version = "1.0.95", default-features = false }
quote = { version = "1.0.40", default-features = false }
serde_json = "1.0.140"
syn = { version = "2.0.101", default-features = false, features = ["parsing"] }
