[package]
name = "dawn-rs"
version = { workspace = true }
edition = { workspace = true }
description = "Safe Rust bindings for Dawn, the open-source and cross-platform implementation of the WebGPU standard that powers Google Chrome, Microsoft Edge and other Chromium browsers."
categories = ["graphics", "api-bindings"]
keywords = ["dawn", "webgpu", "wgpu", "vulkan", "metal"]
license = "MIT OR Apache-2.0"
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
dawn-sys = { path = "../dawn-sys" }
bitflags = "2.9.1"
strum = { version = "0.27.1", features = ["derive"] }
