[package]
name = "dawn-sys"
version = { workspace = true }
edition = { workspace = true }
description = "Unsafe Rust bindings for Dawn, the open-source and cross-platform implementation of the WebGPU standard that powers Google Chrome, Microsoft Edge and other Chromium browsers."
categories = ["external-ffi-bindings"]
keywords = ["dawn", "webgpu", "wgpu", "vulkan", "metal"]
license = "BSD-3-Clause"
authors = { workspace = true }
repository = { workspace = true }

[features]
default = ["strum"]
strum = ["dep:strum"]

[dependencies]
bitflags = "2.9.1"
strum = { version = "0.27.1", features = ["derive"], optional = true }
