[package]
name = "dawn-sys"
version = "1.0.1"
edition = "2024"
license = "BSD-3-Clause"
authors = { workspace = true }
repository = { workspace = true }

description = "Unsafe Rust bindings for Dawn, the open-source and cross-platform implementation of the WebGPU standard that powers Google Chrome, Microsoft Edge and other Chromium browsers."
categories = ["external-ffi-bindings"]
keywords = ["dawn", "webgpu", "wgpu", "vulkan", "metal"]

[dependencies]
bitflags = "2.9.1"

[dev-dependencies]
winsafe = { version = "0.0.24", features = ["gui"] }
